--- a/src/main/resources/javafx/detail1.fxml
+++ b/src/main/resources/javafx/detail1.fxml
@@ -4,21 +4,27 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="2" />
-      <Label text="Label" />
-      <Label text="Label" GridPane.rowIndex="1" />
-      <TextField GridPane.columnIndex="1" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onAction="#onSearch" text="Search" GridPane.rowIndex="4" />
+      <Label text="Genre" GridPane.rowIndex="2" />
+      <Label text="ISBN" GridPane.rowIndex="3" />
+      <TextField fx:id="labelGenre" promptText="Book Genre" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <TextField fx:id="labelISBN" promptText="Book ISBN" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label text="Title" />
+      <Label text="Author" GridPane.rowIndex="1" />
+      <TextField fx:id="labelTitle" promptText="Book Title" GridPane.columnIndex="1" />
+      <TextField fx:id="labelAuthor" promptText="Book Author" GridPane.columnIndex="1" GridPane.rowIndex="1" />
    </children>
 </GridPane>
