--- a/src/main/resources/javafx/main_view.fxml
+++ b/src/main/resources/javafx/main_view.fxml
@@ -25,7 +25,8 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Quit">
               <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" onAction="#quitYes" text="Yes" />
+                  <MenuItem mnemonicParsing="false" text="No" />
               </items>
             </Menu>
         </menus>
