--- a/src/main/resources/javafx/BookListView.fxml
+++ b/src/main/resources/javafx/BookListView.fxml
@@ -4,10 +4,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <ListView maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
+      <ListView fx:id="bookListView" maxHeight="-Infinity" maxWidth="-Infinity" onMouseClicked="#onListClick" prefHeight="300.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
       <Button mnemonicParsing="false" onAction="#doButton" text="Button" BorderPane.alignment="CENTER" />
