--- a/src/main/resources/javafx/controller/BookDetailView.fxml
+++ b/src/main/resources/javafx/controller/BookDetailView.fxml
@@ -4,17 +4,18 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <TextField prefHeight="30.0" prefWidth="170.0" promptText="Title" style="-fx-border-color: gray;" />
-            <TextField layoutY="40.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
-            <TextField layoutY="80.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
+            <TextField fx:id="fieldTitle" prefHeight="30.0" prefWidth="170.0" promptText="Title" style="-fx-border-color: gray;" />
+            <TextField fx:id="fieldYear" layoutY="40.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
+            <TextField fx:id="fieldISBN" layoutY="80.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
+            <Button layoutX="50.0" layoutY="335.0" mnemonicParsing="false" onAction="#onSave" text="Save" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <TextArea prefHeight="398.0" prefWidth="416.0" promptText="Summary" style="-fx-border-color: gray;" />
+            <TextArea fx:id="areaSummary" prefHeight="398.0" prefWidth="416.0" promptText="Summary" style="-fx-border-color: gray;" wrapText="true" />
          </children></AnchorPane>
   </items>
 </SplitPane>
