--- a/src/main/resources/javafx/view/BookListView.fxml
+++ b/src/main/resources/javafx/view/BookListView.fxml
@@ -6,9 +6,9 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <ListView fx:id="bookListView" maxHeight="-Infinity" maxWidth="-Infinity" onMouseClicked="#onListClick" prefHeight="300.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
+      <ListView fx:id="bookListView" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
-      <Button mnemonicParsing="false" onAction="#doButton" text="Search" BorderPane.alignment="CENTER" />
+      <Button mnemonicParsing="false" text="Search" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
