--- a/src/main/resources/javafx/view/BookDetailView.fxml
+++ b/src/main/resources/javafx/view/BookDetailView.fxml
@@ -11,8 +11,8 @@
             <TextField fx:id="fieldTitle" prefHeight="30.0" prefWidth="170.0" promptText="Title" style="-fx-border-color: gray;" />
             <TextField fx:id="fieldYear" layoutY="40.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
             <TextField fx:id="fieldISBN" layoutY="80.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
-            <Button layoutX="17.0" layoutY="335.0" mnemonicParsing="false" text="Save" />
-            <Button layoutX="96.0" layoutY="335.0" mnemonicParsing="false" text="Delete" />
+            <Button fx:id="buttonSave" layoutX="17.0" layoutY="335.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Save" />
+            <Button fx:id="buttonDelete" layoutX="96.0" layoutY="335.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Delete" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
