Fixed create status labels

--- a/src/main/resources/javafx/view/BookCreateView.fxml
+++ b/src/main/resources/javafx/view/BookCreateView.fxml
@@ -32,6 +32,6 @@
       <Text fx:id="alertISBN" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Text fx:id="alertYear" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Text fx:id="alertSummary" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Text fx:id="alertCreateStatus" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
 </GridPane>
