--- a/src/main/resources/javafx/view/BookDetailView.fxml
+++ b/src/main/resources/javafx/view/BookDetailView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -9,10 +10,15 @@
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
             <TextField fx:id="fieldTitle" prefHeight="30.0" prefWidth="170.0" promptText="Title" style="-fx-border-color: gray;" />
-            <TextField fx:id="fieldYear" layoutY="40.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
-            <TextField fx:id="fieldISBN" layoutY="80.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
-            <Button fx:id="buttonUpdate" layoutX="17.0" layoutY="335.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Update" />
-            <Button fx:id="buttonDelete" layoutX="96.0" layoutY="335.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Delete" />
+            <TextField fx:id="fieldYear" layoutY="70.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
+            <TextField fx:id="fieldISBN" layoutY="141.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
+            <Button fx:id="buttonUpdate" layoutX="12.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Update" />
+            <Button fx:id="buttonDelete" layoutX="94.0" layoutY="344.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Delete" />
+            <Button fx:id="buttonCreate" layoutX="57.0" layoutY="263.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Add" />
+            <Text fx:id="alertTitle" layoutX="4.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+            <Text fx:id="alertYear" layoutX="4.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+            <Text fx:id="alertISBN" layoutX="4.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+            <Text fx:id="alertStatus" layoutX="67.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
