--- a/src/main/resources/javafx/view/AuditTrailView.fxml
+++ b/src/main/resources/javafx/view/AuditTrailView.fxml
@@ -5,25 +5,14 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-         <children>
-            <TextField fx:id="fieldTitle" prefHeight="30.0" prefWidth="170.0" promptText="Title" style="-fx-border-color: gray;" />
-            <TextField fx:id="fieldYear" layoutY="70.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
-            <TextField fx:id="fieldISBN" layoutY="141.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
-            <Button fx:id="buttonUpdate" layoutX="12.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Update" />
-            <Button fx:id="buttonDelete" layoutX="94.0" layoutY="344.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Delete" />
-            <Button fx:id="buttonCreate" layoutX="57.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Add" />
-            <Text fx:id="alertTitle" fill="RED" layoutX="4.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="162.0" />
-            <Text fx:id="alertYear" fill="RED" layoutX="4.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="162.0" />
-            <Text fx:id="alertISBN" fill="RED" layoutX="4.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="162.0" />
-            <Text fx:id="alertStatus" layoutX="2.0" layoutY="322.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="170.0" />
-            <ComboBox fx:id="publisherBox" layoutY="201.0" prefHeight="31.0" prefWidth="170.0" />
-         </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-         <children>
-            <TextArea fx:id="areaSummary" prefHeight="398.0" prefWidth="416.0" promptText="Summary" style="-fx-border-color: gray;" wrapText="true" />
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TableView layoutX="-1.0" layoutY="42.0" prefHeight="363.0" prefWidth="600.0">
+        <columns>
+          <TableColumn fx:id="timestamp" prefWidth="197.0" text="Timestamp" />
+          <TableColumn fx:id="message" minWidth="0.0" prefWidth="402.0" text="Message" />
+        </columns>
+      </TableView>
+      <TextField fx:id="auditTrailName" layoutX="9.0" layoutY="4.0" prefHeight="31.0" prefWidth="582.0" />
+   </children>
+</AnchorPane>
