--- a/src/main/resources/javafx/view/BookDetailView.fxml
+++ b/src/main/resources/javafx/view/BookDetailView.fxml
@@ -12,14 +12,15 @@
             <TextField fx:id="fieldTitle" prefHeight="30.0" prefWidth="170.0" promptText="Title" style="-fx-border-color: gray;" />
             <TextField fx:id="fieldYear" layoutY="70.0" prefHeight="30.0" prefWidth="170.0" promptText="Year Published" style="-fx-border-color: gray;" />
             <TextField fx:id="fieldISBN" layoutY="141.0" prefHeight="30.0" prefWidth="170.0" promptText="ISBN" style="-fx-border-color: gray;" />
-            <Button fx:id="buttonUpdate" layoutX="12.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Update" />
+            <Button fx:id="buttonUpdate" layoutX="12.0" layoutY="303.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Update" />
             <Button fx:id="buttonDelete" layoutX="94.0" layoutY="344.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Delete" />
-            <Button fx:id="buttonCreate" layoutX="57.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Add" />
+            <Button fx:id="buttonCreate" layoutX="13.0" layoutY="344.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="31.0" prefWidth="69.0" text="Add" />
             <Text fx:id="alertTitle" fill="RED" layoutX="4.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="162.0" />
             <Text fx:id="alertYear" fill="RED" layoutX="4.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="162.0" />
             <Text fx:id="alertISBN" fill="RED" layoutX="4.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="162.0" />
-            <Text fx:id="alertStatus" layoutX="2.0" layoutY="322.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="170.0" />
+            <Text fx:id="alertStatus" layoutX="2.0" layoutY="284.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="170.0" />
             <ComboBox fx:id="publisherBox" layoutY="201.0" prefHeight="31.0" prefWidth="170.0" />
+            <Button fx:id="buttonAudit" layoutX="93.0" layoutY="303.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="31.0" prefWidth="63.0" text="Audit" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
