--- a/src/main/resources/javafx/view/BookAuditView.fxml
+++ b/src/main/resources/javafx/view/BookAuditView.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView layoutX="-1.0" layoutY="56.0" prefHeight="349.0" prefWidth="600.0">
+      <TableView fx:id="tableViewAudits" layoutX="-1.0" layoutY="56.0" prefHeight="349.0" prefWidth="600.0">
         <columns>
           <TableColumn fx:id="timestamp" prefWidth="197.0" text="Timestamp" />
           <TableColumn fx:id="message" minWidth="0.0" prefWidth="402.0" text="Message" />
