--- a/src/main/resources/javafx/view/main_view.fxml
+++ b/src/main/resources/javafx/view/main_view.fxml
@@ -8,11 +8,7 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
+          <Menu mnemonicParsing="false" text="File" />
           <Menu mnemonicParsing="false" text="Book">
             <items>
                   <MenuItem fx:id="bookCreate" mnemonicParsing="false" onAction="#handleBook" text="Add" />
