--- a/src/main/resources/javafx/view/main_view.fxml
+++ b/src/main/resources/javafx/view/main_view.fxml
@@ -15,9 +15,10 @@
               <MenuItem fx:id="bookRead" mnemonicParsing="false" onAction="#handleBook" text="Read" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Help">
+          <Menu mnemonicParsing="false" text="Reports">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
+                  <MenuItem fx:id="reportsBookDetail" mnemonicParsing="false" text="Book Detail" />
             </items>
           </Menu>
             <Menu mnemonicParsing="false" text="Quit">
